# spend_lens

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
app/: Cargo.toml
app/src/: lib.rs
app_config/: Cargo.toml
app_config/config/: database.yml  default.yml
app_config/src/: lib.rs  settings.rs
background_jobs/: Cargo.toml
background_jobs/src/: main.rs
background_jobs/src/jobs/: email_job.rs  mod.rs
entities/: bill_parse_requests.rs  mod.rs  prelude.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230525_114533_add_users.rs  m20230525_114748_add_bill_parse_requests.rs  main.rs
src/: main.rs
web_app/: Cargo.toml
