[package]
name = "background_jobs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

apalis = { version = "0.4.0", default-features = false, features=["postgres", "tokio-comp", "extensions", "tracing"] }
