[package]
name = "migration"
edition = "2021"
publish = false
version = "0.1.0"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
futures = { workspace = true }
sqlx-rt = { workspace = true }
sea-orm-migration = { workspace = true }

app_config = { path = "../app_config" }

async-std = { version = "1", features = ["attributes", "tokio1"] }
clap = { version = "4.3.0", features = ["derive", "unicode", "env"] }
