[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { workspace = true }
# sea-orm dependency is taken from the workspace for easier sync with the sea-orm-migration package
sea-orm = { workspace = true }

